<resources>
    <string name="app_name">UBI-Bricks</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="settings">Settings</string>
    <string name="check">CHECK</string>
    <string name="add">ADD</string>
    <string name="set_id">Set ID</string>
    <string name="project_name">Project Name</string>
    <string name="new_project">New Project</string>
    <string name="part_image">Part Image</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="project">Project</string>
    <string name="set_download_ok">Inventory downloaded, please wait for the images</string>
    <string name="set_download_error">Inventory download failed! Check your set id</string>
    <string name="set_download_image_ok">Downloaded all images for project</string>
    <string name="settings_url_prefix">Prefix of URL</string>
    <string name="settings_archive">Archive</string>
    <string name="settings_show_archived">Show archived</string>
    <string name="project_export">Export to XML</string>
    <string name="project_archive">Archive project</string>
    <string name="project_unarchive">Unarchive project</string>

</resources>
