<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.pjt.bricksapp.InventoriesListActivity">
    <item
        android:id="@+id/action_project_export"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        android:title="@string/project_export"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_project_archive"
        android:visible="true"
        android:orderInCategory="200"
        android:title="@string/project_archive"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_project_unarchive"
        android:visible="false"
        android:orderInCategory="200"
        android:title="@string/project_unarchive"
        app:showAsAction="never"/>

</menu>
